--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,21 @@
 {
     "name": "ronanguilloux/SilexMarkdown",
     "type": "App",
-    "description": "Generates a markdown-based website, using Silex micro-framework & your own markdown files"
+    "description": "Generates a markdown-based website, using Silex micro-framework & your own markdown files",
     "keywords": ["markdown", "website", "cms", "silex"],
     "homepage": "https://github.com/ronanguilloux/SilexMarkdown",
     "license": "MIT",
-    "authors": [
-        {
-            "name": "Ronan Guilloux",
-            "email": "ronan.guilloux@gmail.com"
-        }
-    ],
-   "require": {
-        "php": ">=5.3.3",
-        "silex/silex": "1.0.*@",
-        "twig/twig": ">=1.8,<2.0-dev",
-        "michelf/php-markdown"
+    "authors": [{
+        "name": "Ronan Guilloux",
+        "email": "ronan.guilloux@gmail.com"
+    }],
+    "require": {
+            "php": ">=5.3.3",
+            "silex/silex": "1.0.*@dev",
+            "twig/twig": ">=1.8,<2.0-dev",
+            "michelf/php-markdown": "1.3.*@dev"
     },
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*"
+    }
 }
