--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ronanguilloux/SilexMarkdown",
+    "name": "ronanguilloux/silexmarkdownserviceprovider",
     "type": "App",
     "description": "Generates a markdown-based website, using Silex micro-framework & your own markdown files",
     "keywords": ["markdown", "website", "cms", "silex"],
@@ -10,12 +10,21 @@
         "email": "ronan.guilloux@gmail.com"
     }],
     "require": {
-            "php": ">=5.3.3",
-            "silex/silex": "1.0.*@dev",
-            "twig/twig": ">=1.8,<2.0-dev",
-            "michelf/php-markdown": "1.3.*@dev"
+        "php": ">=5.3.3",
+        "silex/silex": "1.0.*@dev",
+        "twig/twig": ">=1.8,<2.0-dev",
+        "michelf/php-markdown": "1.3.*@dev",
+        "twitter/bootstrap": "~2.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "3.7.*",
+        "symfony/browser-kit": "dev-master",
+        "symfony/css-selector": "dev-master"
+
+
+    },
+    "autoload": {
+        "psr-0": { "Rg": "vendor/rg/silexmarkdownserviceprovider/src/" }
     }
+
 }
