--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,16 @@
     "authors": [{
         "name": "Ronan Guilloux",
         "email": "ronan.guilloux@gmail.com"
-    }],
+        }],
     "require": {
         "php": ">=5.3.3",
-        "silex/silex": "1.0.*@dev",
-        "twig/twig": ">=1.8,<2.0-dev",
-        "michelf/php-markdown": "1.3.*@dev",
-        "twitter/bootstrap": "~2.3"
+        "silex/silex"           : "1.0.*@dev",
+        "twig/twig"             : ">=1.8,<2.0-dev",
+        "michelf/php-markdown"  : "1.3.*@dev",
+        "twitter/bootstrap"     : "~2.3",
+        "symfony/console"       : "~2.3",
+        "kriswallsmith/assetic" : "~1.0.0",
+        "mheap/silex-assetic"   : "dev-master@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
@@ -24,7 +27,13 @@
 
     },
     "autoload": {
-        "psr-0": { "Rg": "vendor/rg/silexmarkdownserviceprovider/src/" }
+        "psr-0": { 
+            "Rg": "vendor/rg/silexmarkdownserviceprovider/src/",
+            "SilexMarkdown": "src/"
     }
-
+    },
+    "scripts": {
+        "post-install-cmd": "SilexMarkdown\\Composer\\Script::install",
+        "post-update-cmd": "SilexMarkdown\\Composer\\Script::install"
+    }
 }
