--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,14 @@
         }],
     "require": {
         "php": ">=5.3.3",
-        "silex/silex"           : "1.0.*@dev",
-        "twig/twig"             : ">=1.8,<2.0-dev",
-        "michelf/php-markdown"  : "1.3.*@dev",
-        "twitter/bootstrap"     : "~2.3",
-        "symfony/console"       : "~2.3",
-        "kriswallsmith/assetic" : "~1.0.0",
-        "mheap/silex-assetic"   : "dev-master@dev"
+        "silex/silex"                                : "1.0.*@dev",
+        "twig/twig"                                  : ">=1.8,<2.0-dev",
+        "michelf/php-markdown"                       : "1.3.*@dev",
+        "ronanguilloux/silexmarkdownserviceprovider" : "dev-master",
+        "twitter/bootstrap"                          : "~2.3",
+        "symfony/console"                            : "~2.3",
+        "kriswallsmith/assetic"                      : "~1.0.0",
+        "mheap/silex-assetic"                        : "dev-master@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
