--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         }],
     "require": {
         "php": ">=5.3.3",
+        "ronanguilloux/silexmarkdownserviceprovider" : "dev-master",
         "silex/silex"                                : "1.0.*@dev",
         "ronanguilloux/silexmarkdownserviceprovider" : "dev-master",
         "twig/twig"                                  : ">=1.8,<2.0-dev",
