--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "twig/twig"                                  : ">=1.8,<2.0-dev",
         "michelf/php-markdown"                       : "1.3.*@dev",
         "ronanguilloux/silexmarkdownserviceprovider" : "dev-master",
-        "twitter/bootstrap"                          : "~2.3",
+        "twbs/bootstrap"                          : "~2.3",
         "components/bootstrap"                       : "*",
         "components/modernizr"                       : "*",
         "symfony/console"                            : "~2.3",
